--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
                 <div class="logo text-gradient">StyleShirt</div>
                 <nav class="nav">
                     <a href="#home">Início</a>
+<a href="#home">teste</a>
                     <a href="#products">Produtos</a>
                     <a href="#about">Sobre</a>
                     <a href="#contact">Contato</a>
